--- a/index.html
+++ b/index.html
@@ -1,154 +1,237 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Chúc Mừng Năm Mới</title>
 
 <style>
-*{
-  box-sizing:border-box;
+html,body{
   margin:0;
   padding:0;
+  width:100%;
+  height:100%;
+  font-family: "Segoe UI", sans-serif;
+  background:#f6ecd8;
+  overflow:hidden;
 }
 
-body{
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+/* ===== BACKGROUND ===== */
+.background{
+  position:fixed;
+  inset:0;
   background:url("tet-bg.png") center/cover no-repeat;
-  font-family:Arial, Helvetica, sans-serif;
+  z-index:0;
 }
 
-/* KHUNG CHÍNH */
-.container{
+/* ===== CANVAS FIREWORK ===== */
+canvas{
+  position:fixed;
+  inset:0;
+  z-index:1;
+  pointer-events:none;
+}
+
+/* ===== CENTER ===== */
+.center{
   position:relative;
-  width:300px;
-  height:260px;
-}
-
-/* PHONG BÌ */
-.envelope{
-  position:absolute;
-  bottom:0;
-  left:50%;
-  transform:translateX(-50%);
-  width:260px;
-  height:160px;
-}
-
-/* THÂN */
-.envelope-body{
-  position:absolute;
-  bottom:0;
-  width:100%;
-  height:120px;
-  background:#d32f2f;
-  border-radius:0 0 16px 16px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.3);
   z-index:2;
-}
-
-/* NẮP */
-.envelope-flap{
-  position:absolute;
-  top:0;
   width:100%;
-  height:80px;
-  background:#b71c1c;
-  clip-path:polygon(0 0,100% 0,50% 100%);
-  transform-origin:top;
-  transition:transform 0.8s ease;
-  z-index:3;
+  height:100%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
-.envelope.open .envelope-flap{
+/* ===== ENVELOPE ===== */
+.envelope-wrapper{
+  position:relative;
+  width:280px;
+  height:190px;
+}
+
+/* SVG absolute */
+.envelope-wrapper svg{
+  position:absolute;
+  inset:0;
+}
+
+/* FLAP */
+#flap{
+  transform-origin:50% 100%;
+  transition:transform 0.9s cubic-bezier(.4,0,.2,1);
+}
+
+/* OPEN STATE */
+.open #flap{
   transform:rotateX(180deg);
 }
 
-/* THIỆP */
+/* CARD */
 .card{
   position:absolute;
-  bottom:30px;
-  left:50%;
-  transform:translateX(-50%) translateY(100%);
-  width:300px;
-  background:#ffffff;
-  border-radius:16px;
-  padding:24px;
-  text-align:center;
-  box-shadow:0 15px 35px rgba(0,0,0,0.35);
-  transition:transform 1s ease;
-  z-index:1;
+  bottom:15px;
+  left:10px;
+  width:260px;
+  height:160px;
+  background:#fff;
+  border-radius:14px;
+  box-shadow:0 15px 40px rgba(0,0,0,.25);
+  padding:20px;
+  box-sizing:border-box;
+  transform:translateY(120px);
+  transition:transform 1s cubic-bezier(.25,.8,.25,1);
+  z-index:-1;
 }
 
-.envelope.show-card .card{
-  transform:translateX(-50%) translateY(-120%);
+.open .card{
+  transform:translateY(-70px);
 }
 
 .card h2{
+  margin:0 0 10px;
   color:#c62828;
-  margin-bottom:12px;
+  text-align:center;
 }
 
 .card p{
-  font-size:15px;
-  line-height:1.6;
+  margin:0;
+  font-size:14px;
+  line-height:1.5;
   color:#333;
+  text-align:center;
 }
 
-/* NÚT */
+/* BUTTON */
 button{
-  position:absolute;
-  bottom:-60px;
-  left:50%;
-  transform:translateX(-50%);
-  padding:10px 26px;
-  font-size:16px;
+  margin-top:20px;
+  padding:12px 26px;
   border:none;
   border-radius:999px;
   background:#d32f2f;
   color:#fff;
+  font-size:16px;
   cursor:pointer;
+  box-shadow:0 6px 16px rgba(0,0,0,.3);
 }
+
+button:active{transform:scale(.96);}
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <div class="envelope" id="envelope">
-    <div class="envelope-flap"></div>
-    <div class="envelope-body"></div>
+<div class="background"></div>
+<canvas id="firework"></canvas>
 
-    <div class="card">
-      <h2>Chúc Mừng Năm Mới</h2>
-      <p>
-        Chúc bạn bước vào năm mới với sự bình an trong tâm hồn,
-        vững vàng trong suy nghĩ và bền bỉ trên con đường mình chọn.
-        Mong rằng mỗi ngày trôi qua đều mang lại thêm niềm tin,
-        động lực và những điều tốt đẹp giản dị nhưng ý nghĩa.
-        <br><br>
-        An khang – May mắn – Thành công.
-      </p>
+<div class="center">
+  <div>
+    <div class="envelope-wrapper" id="env">
+      <!-- CARD -->
+      <div class="card">
+        <h2>Chúc Mừng Năm Mới</h2>
+        <p>
+          Chúc bạn bước vào năm mới với một trái tim an yên,  
+          một tinh thần vững vàng và một ý chí không ngừng vươn lên.  
+          Mong rằng mỗi nỗ lực đều được ghi nhận,  
+          mỗi ước mơ đều có cơ hội nở hoa,  
+          và mỗi ngày trôi qua đều mang lại niềm tin, hy vọng và hạnh phúc.
+        </p>
+      </div>
+
+      <!-- ENVELOPE SVG -->
+      <svg viewBox="0 0 280 190">
+        <!-- body -->
+        <rect x="0" y="50" width="280" height="140" rx="18" fill="#d32f2f"/>
+        <!-- inner shadow -->
+        <polygon points="0,50 140,120 280,50" fill="#c62828"/>
+        <!-- flap -->
+        <polygon id="flap" points="0,50 140,0 280,50" fill="#b71c1c"/>
+      </svg>
+    </div>
+
+    <div style="text-align:center;">
+      <button id="openBtn">Mở Thiệp</button>
     </div>
   </div>
-
-  <button id="openBtn">Mở Thiệp</button>
 </div>
 
 <script>
-const btn = document.getElementById("openBtn");
-const env = document.getElementById("envelope");
+/* ===== ENVELOPE LOGIC ===== */
+const btn=document.getElementById("openBtn");
+const env=document.getElementById("env");
+let opened=false;
 
-btn.onclick = () => {
+btn.onclick=()=>{
+  if(opened) return;
+  opened=true;
   env.classList.add("open");
-  setTimeout(()=>{
-    env.classList.add("show-card");
-  },300);
-  btn.style.display="none";
+  launchFireworks();
 };
+
+/* ===== FIREWORK CANVAS ===== */
+const canvas=document.getElementById("firework");
+const ctx=canvas.getContext("2d");
+resize();
+window.onresize=resize;
+
+function resize(){
+  canvas.width=innerWidth;
+  canvas.height=innerHeight;
+}
+
+class Particle{
+  constructor(x,y,angle,color){
+    this.x=x;
+    this.y=y;
+    this.vx=Math.cos(angle)*(Math.random()*6+4);
+    this.vy=Math.sin(angle)*(Math.random()*6+4);
+    this.life=80;
+    this.color=color;
+  }
+  update(){
+    this.x+=this.vx;
+    this.y+=this.vy;
+    this.vy+=0.05;
+    this.life--;
+  }
+  draw(){
+    ctx.strokeStyle=this.color;
+    ctx.beginPath();
+    ctx.moveTo(this.x,this.y);
+    ctx.lineTo(this.x-this.vx,this.y-this.vy);
+    ctx.stroke();
+  }
+}
+
+let particles=[];
+
+function boom(x,y){
+  const colors=["#ff5252","#ffd740","#69f0ae","#40c4ff","#e040fb"];
+  for(let i=0;i<120;i++){
+    const a=Math.random()*Math.PI*2;
+    particles.push(new Particle(x,y,a,colors[i%colors.length]));
+  }
+}
+
+function launchFireworks(){
+  for(let i=0;i<6;i++){
+    setTimeout(()=>{
+      boom(
+        Math.random()*canvas.width,
+        Math.random()*canvas.height*0.5
+      );
+    },i*500);
+  }
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particles.forEach(p=>{p.update();p.draw();});
+  particles=particles.filter(p=>p.life>0);
+  requestAnimationFrame(animate);
+}
+animate();
 </script>
 
 </body>
