--- a/index.html
+++ b/index.html
@@ -1,237 +1,241 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Chúc Mừng Năm Mới</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chúc Mừng Năm Mới Bính Ngọ</title>
+
+<!-- Font -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
 
 <style>
-html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
-  font-family: "Segoe UI", sans-serif;
-  background:#f6ecd8;
-  overflow:hidden;
+*{
+    box-sizing:border-box;
+    margin:0;
+    padding:0;
+}
+body{
+    font-family:'Montserrat',sans-serif;
+    background:#fbf3e3;
+    overflow:hidden;
 }
 
-/* ===== BACKGROUND ===== */
-.background{
-  position:fixed;
-  inset:0;
-  background:url("tet-bg.png") center/cover no-repeat;
-  z-index:0;
+/* ===== PHONG BÌ ===== */
+.wrapper{
+    position:fixed;
+    inset:0;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    z-index:5;
 }
 
-/* ===== CANVAS FIREWORK ===== */
-canvas{
-  position:fixed;
-  inset:0;
-  z-index:1;
-  pointer-events:none;
+.envelope{
+    width:260px;
+    height:170px;
+    position:relative;
+    cursor:pointer;
 }
 
-/* ===== CENTER ===== */
-.center{
-  position:relative;
-  z-index:2;
-  width:100%;
-  height:100%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+.env-body{
+    width:100%;
+    height:100%;
+    background:#d32f2f;
+    border-radius:0 0 16px 16px;
+    box-shadow:0 12px 30px rgba(0,0,0,.25);
+    position:absolute;
+    bottom:0;
+    z-index:2;
 }
 
-/* ===== ENVELOPE ===== */
-.envelope-wrapper{
-  position:relative;
-  width:280px;
-  height:190px;
+.env-flap{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#b71c1c;
+    clip-path:polygon(0 0,100% 0,50% 55%);
+    transform-origin:top;
+    transition:transform .9s ease;
+    z-index:3;
 }
 
-/* SVG absolute */
-.envelope-wrapper svg{
-  position:absolute;
-  inset:0;
+.envelope.open .env-flap{
+    transform:rotateX(180deg);
 }
 
-/* FLAP */
-#flap{
-  transform-origin:50% 100%;
-  transition:transform 0.9s cubic-bezier(.4,0,.2,1);
-}
-
-/* OPEN STATE */
-.open #flap{
-  transform:rotateX(180deg);
-}
-
-/* CARD */
+/* ===== THIỆP ===== */
 .card{
-  position:absolute;
-  bottom:15px;
-  left:10px;
-  width:260px;
-  height:160px;
-  background:#fff;
-  border-radius:14px;
-  box-shadow:0 15px 40px rgba(0,0,0,.25);
-  padding:20px;
-  box-sizing:border-box;
-  transform:translateY(120px);
-  transition:transform 1s cubic-bezier(.25,.8,.25,1);
-  z-index:-1;
+    position:absolute;
+    bottom:20px;
+    left:50%;
+    transform:translateX(-50%) translateY(140px);
+    width:88vw;
+    max-width:520px;
+    background:#fff;
+    border-radius:22px;
+    padding:28px 26px;
+    box-shadow:0 30px 60px rgba(0,0,0,.25);
+    text-align:center;
+    opacity:0;
+    transition:transform 1s ease, opacity .8s ease;
+    z-index:1;
 }
 
-.open .card{
-  transform:translateY(-70px);
+.envelope.open + .card{
+    transform:translateX(-50%) translateY(-40px);
+    opacity:1;
 }
 
-.card h2{
-  margin:0 0 10px;
-  color:#c62828;
-  text-align:center;
+/* ===== NỘI DUNG ===== */
+.card h1{
+    font-family:'Great Vibes',cursive;
+    font-size:42px;
+    color:#c62828;
+    margin-bottom:18px;
 }
 
 .card p{
-  margin:0;
-  font-size:14px;
-  line-height:1.5;
-  color:#333;
-  text-align:center;
+    font-size:16px;
+    line-height:1.8;
+    color:#333;
+    white-space:pre-line;
 }
 
-/* BUTTON */
-button{
-  margin-top:20px;
-  padding:12px 26px;
-  border:none;
-  border-radius:999px;
-  background:#d32f2f;
-  color:#fff;
-  font-size:16px;
-  cursor:pointer;
-  box-shadow:0 6px 16px rgba(0,0,0,.3);
+/* ===== NÚT ===== */
+.btn{
+    margin-top:22px;
+    padding:12px 26px;
+    border:none;
+    border-radius:30px;
+    background:#d32f2f;
+    color:#fff;
+    font-size:16px;
+    cursor:pointer;
+    box-shadow:0 8px 18px rgba(0,0,0,.2);
 }
 
-button:active{transform:scale(.96);}
+/* ===== NỀN TẾT ===== */
+.bg{
+    position:fixed;
+    inset:0;
+    background:url("tet-bg.png") center/cover no-repeat;
+    opacity:0;
+    transition:opacity 1s ease;
+    z-index:-1;
+}
+
+.show-bg{
+    opacity:1;
+}
+
+/* ===== PHÁO HOA ===== */
+canvas{
+    position:fixed;
+    inset:0;
+    pointer-events:none;
+    z-index:0;
+}
 </style>
 </head>
 
 <body>
 
-<div class="background"></div>
-<canvas id="firework"></canvas>
+<div class="bg" id="bg"></div>
+<canvas id="fireworks"></canvas>
 
-<div class="center">
-  <div>
-    <div class="envelope-wrapper" id="env">
-      <!-- CARD -->
-      <div class="card">
-        <h2>Chúc Mừng Năm Mới</h2>
-        <p>
-          Chúc bạn bước vào năm mới với một trái tim an yên,  
-          một tinh thần vững vàng và một ý chí không ngừng vươn lên.  
-          Mong rằng mỗi nỗ lực đều được ghi nhận,  
-          mỗi ước mơ đều có cơ hội nở hoa,  
-          và mỗi ngày trôi qua đều mang lại niềm tin, hy vọng và hạnh phúc.
-        </p>
-      </div>
-
-      <!-- ENVELOPE SVG -->
-      <svg viewBox="0 0 280 190">
-        <!-- body -->
-        <rect x="0" y="50" width="280" height="140" rx="18" fill="#d32f2f"/>
-        <!-- inner shadow -->
-        <polygon points="0,50 140,120 280,50" fill="#c62828"/>
-        <!-- flap -->
-        <polygon id="flap" points="0,50 140,0 280,50" fill="#b71c1c"/>
-      </svg>
+<div class="wrapper">
+    <div class="envelope" id="env">
+        <div class="env-flap"></div>
+        <div class="env-body"></div>
     </div>
 
-    <div style="text-align:center;">
-      <button id="openBtn">Mở Thiệp</button>
+    <div class="card" id="card">
+        <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
+        <p id="wish"></p>
+        <button class="btn">An Khang – Thịnh Vượng</button>
     </div>
-  </div>
 </div>
 
-<script>
-/* ===== ENVELOPE LOGIC ===== */
-const btn=document.getElementById("openBtn");
-const env=document.getElementById("env");
-let opened=false;
+<audio id="music" src="tet-music.mp3" preload="auto"></audio>
 
-btn.onclick=()=>{
-  if(opened) return;
-  opened=true;
-  env.classList.add("open");
-  launchFireworks();
+<script>
+/* ===== LỜI CHÚC ===== */
+const wishes=[
+`Xuân Bính Ngọ đã về, mang theo những khởi đầu mới và hy vọng mới.
+
+Chúc bạn bước vào năm mới với một trái tim an yên, một tinh thần mạnh mẽ và một ý chí không ngừng vươn lên phía trước.
+Mong rằng mỗi ngày học tập đều là một ngày tiến bộ, mỗi nỗ lực đều được ghi nhận và mỗi ước mơ đều có cơ hội thành hình.
+
+Chúc bạn đủ kiên trì để vượt qua thử thách, đủ tự tin để theo đuổi hoài bão và đủ bình tĩnh để trân trọng từng khoảnh khắc đang có.
+Năm mới, mong gia đình luôn bình an, cuộc sống tràn đầy năng lượng tích cực và tương lai ngày càng rộng mở.
+
+Chúc Mừng Năm Mới – An Khang, May Mắn và Thành Công. 🌸`
+];
+
+document.getElementById("wish").innerText=
+wishes[Math.floor(Math.random()*wishes.length)];
+
+/* ===== TƯƠNG TÁC ===== */
+const env=document.getElementById("env");
+const bg=document.getElementById("bg");
+const music=document.getElementById("music");
+
+env.onclick=()=>{
+    env.classList.add("open");
+    bg.classList.add("show-bg");
+    playMusic();
+    startFireworks();
 };
 
-/* ===== FIREWORK CANVAS ===== */
-const canvas=document.getElementById("firework");
+/* ===== NHẠC FADE IN ===== */
+function playMusic(){
+    music.volume=0;
+    music.play();
+    let v=0;
+    const fade=setInterval(()=>{
+        v+=0.02;
+        music.volume=Math.min(v,1);
+        if(v>=1) clearInterval(fade);
+    },100);
+}
+
+/* ===== PHÁO HOA TIA DÀI ===== */
+const canvas=document.getElementById("fireworks");
 const ctx=canvas.getContext("2d");
-resize();
-window.onresize=resize;
+canvas.width=innerWidth;
+canvas.height=innerHeight;
 
-function resize(){
-  canvas.width=innerWidth;
-  canvas.height=innerHeight;
+window.onresize=()=>{
+    canvas.width=innerWidth;
+    canvas.height=innerHeight;
+};
+
+function firework(){
+    const x=Math.random()*canvas.width;
+    const y=Math.random()*canvas.height/2;
+    for(let i=0;i<80;i++){
+        const angle=Math.random()*Math.PI*2;
+        const speed=Math.random()*6+3;
+        let px=x,py=y;
+        let life=60;
+        const color=`hsl(${Math.random()*360},100%,60%)`;
+        const interval=setInterval(()=>{
+            ctx.fillStyle=color;
+            ctx.fillRect(px,py,3,3);
+            px+=Math.cos(angle)*speed;
+            py+=Math.sin(angle)*speed;
+            life--;
+            if(life<=0) clearInterval(interval);
+        },16);
+    }
 }
 
-class Particle{
-  constructor(x,y,angle,color){
-    this.x=x;
-    this.y=y;
-    this.vx=Math.cos(angle)*(Math.random()*6+4);
-    this.vy=Math.sin(angle)*(Math.random()*6+4);
-    this.life=80;
-    this.color=color;
-  }
-  update(){
-    this.x+=this.vx;
-    this.y+=this.vy;
-    this.vy+=0.05;
-    this.life--;
-  }
-  draw(){
-    ctx.strokeStyle=this.color;
-    ctx.beginPath();
-    ctx.moveTo(this.x,this.y);
-    ctx.lineTo(this.x-this.vx,this.y-this.vy);
-    ctx.stroke();
-  }
+function startFireworks(){
+    setInterval(firework,800);
 }
-
-let particles=[];
-
-function boom(x,y){
-  const colors=["#ff5252","#ffd740","#69f0ae","#40c4ff","#e040fb"];
-  for(let i=0;i<120;i++){
-    const a=Math.random()*Math.PI*2;
-    particles.push(new Particle(x,y,a,colors[i%colors.length]));
-  }
-}
-
-function launchFireworks(){
-  for(let i=0;i<6;i++){
-    setTimeout(()=>{
-      boom(
-        Math.random()*canvas.width,
-        Math.random()*canvas.height*0.5
-      );
-    },i*500);
-  }
-}
-
-function animate(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  particles.forEach(p=>{p.update();p.draw();});
-  particles=particles.filter(p=>p.life>0);
-  requestAnimationFrame(animate);
-}
-animate();
 </script>
 
 </body>
