--- a/index.html
+++ b/index.html
@@ -5,236 +5,184 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<!-- Font -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat&display=swap" rel="stylesheet">
 
 <style>
-*{
-    box-sizing:border-box;
-    margin:0;
-    padding:0;
-}
+*{box-sizing:border-box;margin:0;padding:0}
+
 body{
-    font-family:'Montserrat',sans-serif;
-    background:#fbf3e3;
-    overflow:hidden;
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#fff6e0;
+  font-family:'Montserrat',sans-serif;
+  overflow:hidden;
 }
 
-/* ===== PHONG BÌ ===== */
-.wrapper{
-    position:fixed;
-    inset:0;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
-    z-index:5;
+/* ===== ENVELOPE ===== */
+.envelope-wrap{
+  position:relative;
+  width:260px;
+  height:180px;
 }
 
 .envelope{
-    width:260px;
-    height:170px;
-    position:relative;
-    cursor:pointer;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:130px;
+  background:#d32f2f;
+  border-radius:0 0 16px 16px;
+  z-index:2;
 }
 
-.env-body{
-    width:100%;
-    height:100%;
-    background:#d32f2f;
-    border-radius:0 0 16px 16px;
-    box-shadow:0 12px 30px rgba(0,0,0,.25);
-    position:absolute;
-    bottom:0;
-    z-index:2;
+.flap{
+  position:absolute;
+  top:0;
+  width:100%;
+  height:90px;
+  background:#b71c1c;
+  clip-path:polygon(0 0,50% 60%,100% 0);
+  transform-origin:top;
+  transition:transform 1s ease;
+  z-index:3;
 }
 
-.env-flap{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:#b71c1c;
-    clip-path:polygon(0 0,100% 0,50% 55%);
-    transform-origin:top;
-    transition:transform .9s ease;
-    z-index:3;
+.envelope.open .flap{
+  transform:rotateX(180deg);
 }
 
-.envelope.open .env-flap{
-    transform:rotateX(180deg);
-}
-
-/* ===== THIỆP ===== */
+/* ===== CARD ===== */
 .card{
-    position:absolute;
-    bottom:20px;
-    left:50%;
-    transform:translateX(-50%) translateY(140px);
-    width:88vw;
-    max-width:520px;
-    background:#fff;
-    border-radius:22px;
-    padding:28px 26px;
-    box-shadow:0 30px 60px rgba(0,0,0,.25);
-    text-align:center;
-    opacity:0;
-    transition:transform 1s ease, opacity .8s ease;
-    z-index:1;
+  position:absolute;
+  bottom:10px;
+  left:50%;
+  transform:translateX(-50%);
+  width:240px;
+  height:160px;
+  background:white url("tet-bg.png") center/cover no-repeat;
+  border-radius:14px;
+  padding:16px;
+  text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.25);
+  opacity:0;
+  transform:translate(-50%,40px);
+  transition:all 1.2s ease;
+  z-index:1;
 }
 
 .envelope.open + .card{
-    transform:translateX(-50%) translateY(-40px);
-    opacity:1;
+  opacity:1;
+  transform:translate(-50%,-140px);
 }
 
-/* ===== NỘI DUNG ===== */
 .card h1{
-    font-family:'Great Vibes',cursive;
-    font-size:42px;
-    color:#c62828;
-    margin-bottom:18px;
+  font-family:'Great Vibes',cursive;
+  font-size:28px;
+  color:#c62828;
+  margin-bottom:10px;
 }
 
 .card p{
-    font-size:16px;
-    line-height:1.8;
-    color:#333;
-    white-space:pre-line;
+  font-size:14px;
+  line-height:1.6;
+  color:#333;
+  background:rgba(255,255,255,.85);
+  padding:10px;
+  border-radius:10px;
 }
 
-/* ===== NÚT ===== */
-.btn{
-    margin-top:22px;
-    padding:12px 26px;
-    border:none;
-    border-radius:30px;
-    background:#d32f2f;
-    color:#fff;
-    font-size:16px;
-    cursor:pointer;
-    box-shadow:0 8px 18px rgba(0,0,0,.2);
+/* ===== BUTTON ===== */
+button{
+  margin-top:200px;
+  padding:12px 36px;
+  border:none;
+  border-radius:999px;
+  background:#c62828;
+  color:#fff;
+  font-size:16px;
+  cursor:pointer;
+  z-index:10;
+  position:relative;
 }
 
-/* ===== NỀN TẾT ===== */
-.bg{
-    position:fixed;
-    inset:0;
-    background:url("tet-bg.png") center/cover no-repeat;
-    opacity:0;
-    transition:opacity 1s ease;
-    z-index:-1;
+/* ===== FIREWORKS ===== */
+.firework{
+  position:absolute;
+  width:6px;
+  height:6px;
+  border-radius:50%;
+  animation:explode 1.4s ease-out forwards;
 }
 
-.show-bg{
-    opacity:1;
+@keyframes explode{
+  from{transform:scale(1);opacity:1}
+  to{transform:translate(var(--x),var(--y)) scale(0);opacity:0}
 }
 
-/* ===== PHÁO HOA ===== */
-canvas{
-    position:fixed;
-    inset:0;
-    pointer-events:none;
-    z-index:0;
+/* ===== MOBILE ===== */
+@media(max-width:480px){
+  .envelope-wrap{width:220px}
+  .card{width:210px}
 }
 </style>
 </head>
 
 <body>
 
-<div class="bg" id="bg"></div>
-<canvas id="fireworks"></canvas>
+<div class="envelope-wrap">
+  <div class="envelope" id="envelope">
+    <div class="flap"></div>
+  </div>
 
-<div class="wrapper">
-    <div class="envelope" id="env">
-        <div class="env-flap"></div>
-        <div class="env-body"></div>
-    </div>
-
-    <div class="card" id="card">
-        <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
-        <p id="wish"></p>
-        <button class="btn">An Khang – Thịnh Vượng</button>
-    </div>
+  <div class="card" id="card">
+    <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
+    <p id="wish"></p>
+  </div>
 </div>
 
-<audio id="music" src="tet-music.mp3" preload="auto"></audio>
+<button onclick="openCard()">Mở Thiệp</button>
+
+<audio id="music" src="tet.mp3"></audio>
 
 <script>
-/* ===== LỜI CHÚC ===== */
 const wishes=[
-`Xuân Bính Ngọ đã về, mang theo những khởi đầu mới và hy vọng mới.
-
-Chúc bạn bước vào năm mới với một trái tim an yên, một tinh thần mạnh mẽ và một ý chí không ngừng vươn lên phía trước.
-Mong rằng mỗi ngày học tập đều là một ngày tiến bộ, mỗi nỗ lực đều được ghi nhận và mỗi ước mơ đều có cơ hội thành hình.
-
-Chúc bạn đủ kiên trì để vượt qua thử thách, đủ tự tin để theo đuổi hoài bão và đủ bình tĩnh để trân trọng từng khoảnh khắc đang có.
-Năm mới, mong gia đình luôn bình an, cuộc sống tràn đầy năng lượng tích cực và tương lai ngày càng rộng mở.
-
-Chúc Mừng Năm Mới – An Khang, May Mắn và Thành Công. 🌸`
+"Chúc năm mới mang đến cho bạn thật nhiều bình an, sức khỏe dồi dào và tinh thần vững vàng để chinh phục những mục tiêu phía trước.\nMong mỗi ngày học tập đều tràn đầy động lực, mỗi cố gắng đều được đền đáp xứng đáng.\nChúc bạn đủ kiên trì khi gặp khó khăn và đủ tự tin khi đứng trước cơ hội.\nNăm mới, mong bạn luôn giữ được nụ cười và niềm tin vào chính mình.\nXuân đến, chúc tương lai ngày càng rộng mở."
 ];
 
-document.getElementById("wish").innerText=
-wishes[Math.floor(Math.random()*wishes.length)];
-
-/* ===== TƯƠNG TÁC ===== */
-const env=document.getElementById("env");
-const bg=document.getElementById("bg");
-const music=document.getElementById("music");
-
-env.onclick=()=>{
-    env.classList.add("open");
-    bg.classList.add("show-bg");
-    playMusic();
-    startFireworks();
-};
-
-/* ===== NHẠC FADE IN ===== */
-function playMusic(){
-    music.volume=0;
-    music.play();
-    let v=0;
-    const fade=setInterval(()=>{
-        v+=0.02;
-        music.volume=Math.min(v,1);
-        if(v>=1) clearInterval(fade);
-    },100);
-}
-
-/* ===== PHÁO HOA TIA DÀI ===== */
-const canvas=document.getElementById("fireworks");
-const ctx=canvas.getContext("2d");
-canvas.width=innerWidth;
-canvas.height=innerHeight;
-
-window.onresize=()=>{
-    canvas.width=innerWidth;
-    canvas.height=innerHeight;
-};
-
-function firework(){
-    const x=Math.random()*canvas.width;
-    const y=Math.random()*canvas.height/2;
-    for(let i=0;i<80;i++){
-        const angle=Math.random()*Math.PI*2;
-        const speed=Math.random()*6+3;
-        let px=x,py=y;
-        let life=60;
-        const color=`hsl(${Math.random()*360},100%,60%)`;
-        const interval=setInterval(()=>{
-            ctx.fillStyle=color;
-            ctx.fillRect(px,py,3,3);
-            px+=Math.cos(angle)*speed;
-            py+=Math.sin(angle)*speed;
-            life--;
-            if(life<=0) clearInterval(interval);
-        },16);
-    }
+function openCard(){
+  document.querySelector("button").style.display="none";
+  document.getElementById("envelope").classList.add("open");
+  document.getElementById("wish").innerText=wishes[0];
+  startFireworks();
+  playMusic();
 }
 
 function startFireworks(){
-    setInterval(firework,800);
+  for(let i=0;i<120;i++){
+    const fw=document.createElement("div");
+    fw.className="firework";
+    fw.style.left="50%";
+    fw.style.top="30%";
+    fw.style.background=`hsl(${Math.random()*360},100%,60%)`;
+    fw.style.setProperty("--x",`${Math.random()*600-300}px`);
+    fw.style.setProperty("--y",`${Math.random()*-400}px`);
+    document.body.appendChild(fw);
+    setTimeout(()=>fw.remove(),1400);
+  }
+}
+
+function playMusic(){
+  const music=document.getElementById("music");
+  music.volume=0;
+  music.play();
+  let v=0;
+  const fade=setInterval(()=>{
+    v+=0.02;
+    music.volume=Math.min(v,1);
+    if(v>=1)clearInterval(fade);
+  },100);
 }
 </script>
 
