--- a/index.html
+++ b/index.html
@@ -5,184 +5,203 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chúc Mừng Năm Mới Bính Ngọ</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
-
+*{box-sizing:border-box}
 body{
-  min-height:100vh;
+  margin:0;
+  height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  background:#fff6e0;
-  font-family:'Montserrat',sans-serif;
+  background:#fbf3e6;
   overflow:hidden;
+  font-family:Arial, sans-serif;
 }
 
-/* ===== ENVELOPE ===== */
-.envelope-wrap{
-  position:relative;
-  width:260px;
-  height:180px;
+/* ================= PHONG BÌ ================= */
+#envelope-screen{
+  text-align:center;
+  transition:opacity .8s ease;
 }
 
 .envelope{
-  position:absolute;
-  bottom:0;
+  width:300px;
+  max-width:80vw;
+  position:relative;
+  perspective:1000px;
+}
+
+/* Thân phong bì */
+.envelope-body{
   width:100%;
-  height:130px;
+  height:180px;
   background:#d32f2f;
-  border-radius:0 0 16px 16px;
-  z-index:2;
-}
-
-.flap{
-  position:absolute;
-  top:0;
-  width:100%;
-  height:90px;
-  background:#b71c1c;
-  clip-path:polygon(0 0,50% 60%,100% 0);
-  transform-origin:top;
-  transition:transform 1s ease;
-  z-index:3;
-}
-
-.envelope.open .flap{
-  transform:rotateX(180deg);
-}
-
-/* ===== CARD ===== */
-.card{
-  position:absolute;
-  bottom:10px;
-  left:50%;
-  transform:translateX(-50%);
-  width:240px;
-  height:160px;
-  background:white url("tet-bg.png") center/cover no-repeat;
-  border-radius:14px;
-  padding:16px;
-  text-align:center;
-  box-shadow:0 10px 30px rgba(0,0,0,.25);
-  opacity:0;
-  transform:translate(-50%,40px);
-  transition:all 1.2s ease;
+  border-radius:0 0 20px 20px;
+  position:relative;
   z-index:1;
 }
 
-.envelope.open + .card{
-  opacity:1;
-  transform:translate(-50%,-140px);
+/* NẮP PHONG BÌ – FIX CHUẨN */
+.envelope-flap{
+  width:0;
+  height:0;
+  border-left:150px solid transparent;
+  border-right:150px solid transparent;
+  border-bottom:90px solid #b71c1c;
+  position:absolute;
+  top:-90px;
+  left:0;
+  transform-origin:bottom center;
+  transform:rotateX(180deg); /* ⬅️ MẶC ĐỊNH: ĐÓNG */
+  transition:transform .9s ease;
+  z-index:2;
 }
 
-.card h1{
-  font-family:'Great Vibes',cursive;
-  font-size:28px;
-  color:#c62828;
-  margin-bottom:10px;
+/* Khi bấm mở */
+.open .envelope-flap{
+  transform:rotateX(0deg); /* ⬅️ MỞ LÊN */
 }
 
-.card p{
-  font-size:14px;
-  line-height:1.6;
-  color:#333;
-  background:rgba(255,255,255,.85);
-  padding:10px;
-  border-radius:10px;
-}
-
-/* ===== BUTTON ===== */
 button{
-  margin-top:200px;
-  padding:12px 36px;
+  margin-top:20px;
+  padding:12px 34px;
   border:none;
   border-radius:999px;
   background:#c62828;
   color:#fff;
   font-size:16px;
   cursor:pointer;
-  z-index:10;
-  position:relative;
 }
 
-/* ===== FIREWORKS ===== */
+/* ================= THIỆP ================= */
+#card-screen{
+  position:fixed;
+  inset:0;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:url("tet-bg.png") center/cover no-repeat;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity 1s ease;
+}
+
+#card-screen.show{
+  opacity:1;
+  pointer-events:auto;
+}
+
+.card{
+  background:#ffffffee;
+  width:90%;
+  max-width:560px;
+  padding:34px 28px;
+  border-radius:22px;
+  text-align:center;
+  box-shadow:0 30px 60px rgba(0,0,0,.35);
+}
+
+h1{
+  font-family:'Dancing Script', cursive;
+  font-size:38px;
+  color:#b71c1c;
+  margin-bottom:16px;
+}
+
+p{
+  font-size:16px;
+  line-height:1.7;
+  color:#333;
+}
+
+/* ================= PHÁO HOA ================= */
 .firework{
-  position:absolute;
-  width:6px;
-  height:6px;
+  position:fixed;
+  width:5px;
+  height:5px;
   border-radius:50%;
-  animation:explode 1.4s ease-out forwards;
+  animation:boom 1.3s linear infinite;
 }
 
-@keyframes explode{
-  from{transform:scale(1);opacity:1}
-  to{transform:translate(var(--x),var(--y)) scale(0);opacity:0}
+@keyframes boom{
+  0%{transform:scale(0);opacity:1}
+  100%{transform:scale(20);opacity:0}
 }
 
-/* ===== MOBILE ===== */
 @media(max-width:480px){
-  .envelope-wrap{width:220px}
-  .card{width:210px}
+  h1{font-size:30px}
 }
 </style>
 </head>
 
 <body>
 
-<div class="envelope-wrap">
-  <div class="envelope" id="envelope">
-    <div class="flap"></div>
+<!-- PHONG BÌ -->
+<div id="envelope-screen">
+  <div class="envelope" id="env">
+    <div class="envelope-flap"></div>
+    <div class="envelope-body"></div>
   </div>
+  <button onclick="openCard()">Mở Thiệp</button>
+</div>
 
-  <div class="card" id="card">
+<!-- THIỆP -->
+<div id="card-screen">
+  <div class="card">
     <h1>Chúc Mừng Năm Mới Bính Ngọ</h1>
     <p id="wish"></p>
   </div>
 </div>
 
-<button onclick="openCard()">Mở Thiệp</button>
-
-<audio id="music" src="tet.mp3"></audio>
+<audio id="music" src="tet-music.mp3" loop></audio>
 
 <script>
 const wishes=[
-"Chúc năm mới mang đến cho bạn thật nhiều bình an, sức khỏe dồi dào và tinh thần vững vàng để chinh phục những mục tiêu phía trước.\nMong mỗi ngày học tập đều tràn đầy động lực, mỗi cố gắng đều được đền đáp xứng đáng.\nChúc bạn đủ kiên trì khi gặp khó khăn và đủ tự tin khi đứng trước cơ hội.\nNăm mới, mong bạn luôn giữ được nụ cười và niềm tin vào chính mình.\nXuân đến, chúc tương lai ngày càng rộng mở."
+"Chúc năm mới an khang thịnh vượng, học tập tiến bộ và tràn đầy may mắn.",
+"Mong Bính Ngọ mang đến sức khỏe, niềm vui và những thành công rực rỡ.",
+"Chúc một năm mới bình an, nhiều năng lượng tích cực và hạnh phúc dài lâu."
 ];
 
 function openCard(){
-  document.querySelector("button").style.display="none";
-  document.getElementById("envelope").classList.add("open");
-  document.getElementById("wish").innerText=wishes[0];
-  startFireworks();
-  playMusic();
-}
+  document.getElementById("env").classList.add("open");
 
-function startFireworks(){
-  for(let i=0;i<120;i++){
-    const fw=document.createElement("div");
-    fw.className="firework";
-    fw.style.left="50%";
-    fw.style.top="30%";
-    fw.style.background=`hsl(${Math.random()*360},100%,60%)`;
-    fw.style.setProperty("--x",`${Math.random()*600-300}px`);
-    fw.style.setProperty("--y",`${Math.random()*-400}px`);
-    document.body.appendChild(fw);
-    setTimeout(()=>fw.remove(),1400);
-  }
+  setTimeout(()=>{
+    document.getElementById("envelope-screen").style.opacity="0";
+  },800);
+
+  setTimeout(()=>{
+    document.getElementById("envelope-screen").style.display="none";
+    document.getElementById("card-screen").classList.add("show");
+    document.getElementById("wish").innerText =
+      wishes[Math.floor(Math.random()*wishes.length)];
+    playMusic();
+    fireworks();
+  },1400);
 }
 
 function playMusic(){
-  const music=document.getElementById("music");
-  music.volume=0;
-  music.play();
+  const m=document.getElementById("music");
+  m.volume=0;
+  m.play();
   let v=0;
   const fade=setInterval(()=>{
-    v+=0.02;
-    music.volume=Math.min(v,1);
-    if(v>=1)clearInterval(fade);
+    if(v<1){v+=0.03;m.volume=v}
+    else clearInterval(fade);
   },100);
+}
+
+function fireworks(){
+  setInterval(()=>{
+    const f=document.createElement("div");
+    f.className="firework";
+    f.style.left=Math.random()*100+"vw";
+    f.style.top=Math.random()*100+"vh";
+    f.style.background=`hsl(${Math.random()*360},100%,60%)`;
+    document.body.appendChild(f);
+    setTimeout(()=>f.remove(),1300);
+  },200);
 }
 </script>
 
